--- a/views/form.ejs
+++ b/views/form.ejs
@@ -5,7 +5,7 @@
     <title><%= title %></title>
 </head>
 <body>
-<form method="post" action="b.ejs">
+<form method="post" action="form.ejs">
     <label>发表新文章</label>
     <textarea name="text" cols="100" rows="5"></textarea>
     <input type="submit" value="发表">
